# recipes

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml  recipes.yaml
.github/workflows/: publish-islo-ai-sdk-sandbox.yml  recipes-smoke.yml  validate.yml
recipes/: catalog.yaml
recipes/_template/: .env.example  README.md  pyproject.toml  run.py
recipes/ai-sdk-harness-chat/: .env.example  README.md  next.config.ts  package-lock.json  package.json
recipes/ai-sdk-harness-chat/app/: layout.tsx  (+1 more)
recipes/anthropic-claude-code-in-sandbox/: README.md  pyproject.toml
recipes/claude-agent-sdk-in-sandbox/: .env.example  README.md  pyproject.toml
recipes/docker-compose-fastapi-postgres/: README.md  docker-compose.yaml  pyproject.toml  run.py
recipes/gateway-allowlist/: .env.example  README.md  pyproject.toml  run.py
recipes/harbor-evals/: .env.example  README.md  gateway-egress.example.yaml  pyproject.toml  run.py  run_terminal_bench.py
recipes/islo-reviewer/: .env.example  README.md
recipes/mount-s3/: .env.example  Dockerfile  README.md  build_push_image.sh  mount-s3.sh  pyproject.toml  run.py
recipes/openai-codex-in-sandbox/: .env.example  README.md  pyproject.toml
recipes/playwright/: .env.example  README.md  pyproject.toml  run.py
recipes/web-app-e2e/: README.md  pyproject.toml  requirements.txt  run.py
scripts/: discover_recipes.py  smoke.sh  smoke_manifest.py  test_local.sh  validate.sh  validate_catalog.py  validate_recipes.py
src/islo_recipes/: __init__.py  computer.py
src/recipekit/: __init__.py  computer.py
tests/: conftest.py  recipes.yaml  test_smoke_live.py  test_structure.py
(+20 files in other folders)
