[project]
name = "islo-recipes"
version = "0.1.0"
description = "Customer-facing recipes for building on Islo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "islo>=0.3.1",
  "python-dotenv",
]

[project.optional-dependencies]
web-app-e2e = ["fastapi", "uvicorn", "pytest", "playwright", "httpx"]
docker-compose = ["httpx"]
dev = ["pytest", "pyyaml", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/islo_recipes"]

[tool.ruff]
line-length = 100
target-version = "py310"
