[project]
name = "islo-recipes"
version = "0.1.0"
description = "Islo recipe cookbook — each recipe under recipes/ is self-contained"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pyyaml", "pytest", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
markers = [
    "live: live Islo smoke test (requires ISLO_API_KEY)",
    "live_aws: live smoke test requiring AWS secrets",
    "live_agent: live smoke test requiring provider API keys",
]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
