[project]
name = "islo-recipes"
version = "0.1.0"
description = "Islo recipe cookbook — each recipe under recipes/ is self-contained"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pyyaml", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py310"
